Fix checkbox visibility

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -2773,7 +2773,7 @@ header {
   -moz-appearance: initial;
   position: relative;
   cursor: pointer;
-  z-index: 60;
+  z-index: 19;
 }
 .news-form__check:before {
   box-sizing: border-box;
